--- a/docs/components/accordion.html
+++ b/docs/components/accordion.html
@@ -6,34 +6,37 @@
 <div>
   <h2>Dependencies</h2>
   <ul>
-    <li><a href="#icon">icon</a></li>
+    <li><a href="#icon">ui-icon</a></li>
+    <li>ui-accordion-item</li>
   </ul>
 </div>
 
 <div>
   <h2>Info</h2>
   <p>The structure must be strictly followed.</p>
-  <p>The accordion allows multiple items to be opened.</p>
+  <p>By default, the accordion allows multiple items to be expanded, but it can be set to single-item mode.</p>
   <p>The heading can be any HTML heading element from h2 to h6; h3 is recommended.</p>
+  <p>The accordion does not support dynamically adding or removing items.</p>
 </div>
 
 <div>
   <h2>Attributes</h2>
-  <p><strong>Item:</strong></p>
-  <p>data-expanded="true" - static (optional). The associated panel is expanded.</p>
-  <p><strong>Button:</strong></p>
-  <p>disabled - static (optional). Determines whether the heading button is disabled.</p>
+  <p><strong>ui-accordion:</strong></p>
+  <p>single - static (optional). Allows only one expanded item at a time.</p>
+  <p><strong>ui-accordion-item:</strong></p>
+  <p>disabled - reactive (optional). Determines if the item is disabled.</p>
+  <p>expanded - reactive (optional). The associated panel is expanded.</p>
 </div>
 
 <section class="content">
 
   <div class="content-item">
-    <div>Default</div>
+    <div>Multiplie</div>
     <div class="example">
       <div class="preview">
         <ui-accordion>
 
-          <div data-expanded="true">
+          <ui-accordion-item expanded>
             <h3>
               <button>
                 What is Lorem? (expanded)
@@ -43,21 +46,21 @@
             <div>
               Lorem Ipsum is simply dummy text of the printing and typesetting industry.
             </div>
-          </div>
+          </ui-accordion-item>
 
-          <div>
+          <ui-accordion-item>
             <h3>
-              <button disabled>
-                What is Lorem? (disabled)
+              <button>
+                What is Lorem?
               </button>
             </h3>
 
             <div>
               Lorem ipsum dolor sit amet...
             </div>
-          </div>
+          </ui-accordion-item>
 
-          <div>
+          <ui-accordion-item>
             <h3>
               <button>
                 <ui-icon name="light-mode"></ui-icon>
@@ -68,7 +71,7 @@
             <div>
               Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
             </div>
-          </div>
+          </ui-accordion-item>
 
         </ui-accordion>
       </div>
@@ -79,31 +82,31 @@
 
 <pre><code>
 &lt;ui-accordion&gt;
-  &lt;div data-expanded="true"&gt; &lt;!-- item --&gt;
-    &lt;h3&gt; &lt;!-- heading --&gt;
+  &lt;ui-accordion-item expanded&gt;
+    &lt;h3&gt;
       &lt;button&gt;
         What is Lorem?
-      &lt;/button&gt;
-    &lt;/h3&gt;
-
-    &lt;div&gt; &lt;!-- panel --&gt;
-      Lorem Ipsum is simply dummy text.
-    &lt;/div&gt;
-  &lt;/div&gt;
-
-  &lt;div&gt;
-    &lt;h3&gt;
-      &lt;button disabled&gt;
-        What is Lorem? (disabled)
       &lt;/button&gt;
     &lt;/h3&gt;
 
     &lt;div&gt;
       Lorem Ipsum is simply dummy text.
     &lt;/div&gt;
-  &lt;/div&gt;
+  &lt;/ui-accordion-item&gt;
 
-  &lt;div&gt;
+  &lt;ui-accordion-item&gt;
+    &lt;h3&gt;
+      &lt;button&gt;
+        What is Lorem?
+      &lt;/button&gt;
+    &lt;/h3&gt;
+
+    &lt;div&gt;
+      Lorem Ipsum is simply dummy text.
+    &lt;/div&gt;
+  &lt;/ui-accordion-item&gt;
+
+  &lt;ui-accordion-item&gt;
     &lt;h3&gt;
       &lt;button&gt;
         &lt;ui-icon name="light-mode"&gt;&lt;/ui-icon&gt;
@@ -114,7 +117,102 @@
     &lt;div&gt;
       Lorem Ipsum is simply dummy text.
     &lt;/div&gt;
-  &lt;/div&gt;
+  &lt;/ui-accordion-item&gt;
+&lt;/ui-accordion&gt;
+</code></pre>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="content-item">
+    <div>Single mode with a disabled item</div>
+    <div class="example">
+      <div class="preview">
+        <ui-accordion single>
+
+          <ui-accordion-item expanded>
+            <h3>
+              <button>
+                What is Lorem? (expanded)
+              </button>
+            </h3>
+
+            <div>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            </div>
+          </ui-accordion-item>
+
+          <ui-accordion-item disabled>
+            <h3>
+              <button>
+                What is Lorem? (disabled)
+              </button>
+            </h3>
+
+            <div>
+              Lorem ipsum dolor sit amet...
+            </div>
+          </ui-accordion-item>
+
+          <ui-accordion-item>
+            <h3>
+              <button>
+                <ui-icon name="light-mode"></ui-icon>
+                What is Lorem?
+              </button>
+            </h3>
+
+            <div>
+              Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            </div>
+          </ui-accordion-item>
+
+        </ui-accordion>
+      </div>
+      <div class="toolbar">
+        <span>HTML</span>
+      </div>
+      <div class="code">
+
+<pre><code>
+&lt;ui-accordion single&gt;
+  &lt;ui-accordion-item expanded&gt;
+    &lt;h3&gt;
+      &lt;button&gt;
+        What is Lorem?
+      &lt;/button&gt;
+    &lt;/h3&gt;
+
+    &lt;div&gt;
+      Lorem Ipsum is simply dummy text.
+    &lt;/div&gt;
+  &lt;/ui-accordion-item&gt;
+
+  &lt;ui-accordion-item disabled&gt;
+    &lt;h3&gt;
+      &lt;button&gt;
+        What is Lorem? (disabled)
+      &lt;/button&gt;
+    &lt;/h3&gt;
+
+    &lt;div&gt;
+      Lorem Ipsum is simply dummy text.
+    &lt;/div&gt;
+  &lt;/ui-accordion-item&gt;
+
+  &lt;ui-accordion-item&gt;
+    &lt;h3&gt;
+      &lt;button&gt;
+        &lt;ui-icon name="light-mode"&gt;&lt;/ui-icon&gt;
+        What is Lorem?
+      &lt;/button&gt;
+    &lt;/h3&gt;
+
+    &lt;div&gt;
+      Lorem Ipsum is simply dummy text.
+    &lt;/div&gt;
+  &lt;/ui-accordion-item&gt;
 &lt;/ui-accordion&gt;
 </code></pre>
 
