--- a/docs/components/alert.html
+++ b/docs/components/alert.html
@@ -6,8 +6,8 @@
 <div>
   <h2>Dependencies</h2>
   <ul>
-    <li><a href="#icon">icon</a></li>
-    <li><a href="#button">button</a></li>
+    <li><a href="#icon">ui-icon</a></li>
+    <li><a href="#button">ui-button</a></li>
   </ul>
 </div>
 
