--- a/docs/components/checkbox.html
+++ b/docs/components/checkbox.html
@@ -6,13 +6,13 @@
 <div>
   <h2>Dependencies</h2>
   <ul>
-    <li><a href="#icon">icon</a></li>
+    <li><a href="#icon">ui-icon</a></li>
   </ul>
 </div>
 
 <div>
   <h2>Attributes</h2>
-  <p>aria-label - static (required). If used outside of the <a href="#field">field</a> component, the aria-label must be set manually.</p>
+  <p>aria-label - static (required). If used outside of the <a href="#field">ui-field</a> component, the aria-label must be set manually.</p>
   <p>required - static (optional). Default: false. Indicates whether the component is required.</p>
   <p>checked - reactive (optional). Default: false. Controls the checked state of the component.</p>
   <p>disabled - reactive (optional). Default: false. Controls the disabled state of the component.</p>
