--- a/docs/components/select.html
+++ b/docs/components/select.html
@@ -6,14 +6,14 @@
 <div>
   <h2>Dependencies</h2>
   <ul>
-    <li><a href="#icon">icon</a></li>
-    <li><a href="#button">button</a></li>
+    <li><a href="#icon">ui-icon</a></li>
+    <li><a href="#button">ui-button</a></li>
   </ul>
 </div>
 
 <div>
   <h2>Attributes</h2>
-  <p>aria-label - static (required). If used outside of the <a href="#field">field</a> component, the aria-label must be set manually.</p>
+  <p>aria-label - static (required). If used outside of the <a href="#field">ui-field</a> component, the aria-label must be set manually.</p>
   <p>placeholder - static (optional). Default: "-". Static text to display when no item is selected.</p>
   <p>icon - static (init-only, optional). Default: arrow-down-small.</p>
   <p>shape - static (optional). Default: rounded. Available options: rounded, pill, square. Sets the corner style.</p>
