--- a/docs/components/spinner.html
+++ b/docs/components/spinner.html
@@ -6,7 +6,7 @@
 <div>
   <h2>Dependencies</h2>
   <ul>
-    <li><a href="#icon">icon</a></li>
+    <li><a href="#icon">ui-icon</a></li>
   </ul>
 </div>
 
